--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,18 @@
-<h1>
-  {{title}}
-</h1>
+<h1>Hot Weather Widget | {{title}}</h1>
+
+<div class="element">
+  <div class="element-left">
+    <div class="element-bg-img"><img src="assets/images/1.jpg" alt="" class="img-responsive"></div>
+    <app-area-points></app-area-points>
+  </div>
+  <div class="element-right">
+    <app-temperatur></app-temperatur>
+    <app-teddy-bear></app-teddy-bear>
+  </div>
+  <div class="clear"></div>
+</div>
+
+<div class="copy-right">
+  <p>© 2015 Hot Weather Widget. All rights reserved | Design by <a href="http://w3layouts.com/" target="_blank">
+    W3layouts </a></p>
+</div>
