--- a/src/app/area-points/area-points.component.html
+++ b/src/app/area-points/area-points.component.html
@@ -8,7 +8,7 @@
     </ul>
   </div>
   <div class="village">
-    <h3>Righteous indignation & like</h3>
+    <h3 (click)="choose(places[1])">Righteous indignation & like</h3>
     <span class="line"> </span>
     <div class="activity_box">
       <div class="scrollbar" id="style-2">
