--- a/src/app/area-points/area-points.component.css
+++ b/src/app/area-points/area-points.component.css
@@ -31,10 +31,17 @@
 .activity-img ul li img{
     border-radius:50px;
 }
-ul li.anc-bor {
+.ele-strip ul li.anc-bor {
     border-right: none;
 }
 /*--scroll --*/
+span.line {
+    background: url(assets/images/line.png)no-repeat;
+    width: 103px;
+    height: 2px;
+    display: block;
+    margin: 0.6em auto 0em;
+}
 .span_7 {
     padding-left: 0;
 }
@@ -59,6 +66,9 @@ ul li.anc-bor {
 }
 .activity-row, .activity-row1{
     text-align: left;
+}
+.activity-row.active {
+    background-color: rgba(252, 209, 169, 0.15);
 }
 i.text-info{
     float: left;
@@ -131,9 +141,14 @@ i.text-info{
 }
 .activity-img ul li {
     display: inline-block;
+    width: 50px;
+    height: 50px;
 }
 .activity-img ul li img{
+    max-width: 100%;
+    height: 100%;
     border-radius:50px;
+
 }
 /*--village start here--*/
 .village {
@@ -147,4 +162,10 @@ i.text-info{
     color: #000;
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
+
+}
+
+.village h5 {
+    cursor: pointer;
+    text-decoration: underline;
 }
