--- a/src/app/teddy-bear/teddy-bear.component.css
+++ b/src/app/teddy-bear/teddy-bear.component.css
@@ -10,7 +10,14 @@
 .teddy-text h4 {
     color: #fff;
 }
+.teddy-text .img-wrap {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+}
 .teddy-text img {
+    max-width: 100%;
+    height:100%;
     border-radius: 70px;
     border: 3px solid #fff;
 }
