--- a/src/app/teddy-bear/teddy-bear.component.html
+++ b/src/app/teddy-bear/teddy-bear.component.html
@@ -2,14 +2,16 @@
   <div class="teddy-text">
     <h4>Nam libero voluptatem</h4>
     <span class="w-line"> </span>
-    <img src="images/b1.jpg" alt=""  class="img-responsive">
+    <div class="img-wrap">
+      <img [src]="activePlace?.images[1]" alt="">
+    </div>
   </div>
   <div class="teddy-follow">
     <ul>
-      <li class="folw-h"><h3>2850</h3>
+      <li class="folw-h"><h3>{{activePlace?.followers}}</h3>
         <p>Followers</p>
       </li>
-      <li><h3>675</h3>
+      <li><h3>{{activePlace?.following}}</h3>
         <p>Following</p>
       </li>
     </ul>
