--- a/src/app/temperatur/temperatur.component.html
+++ b/src/app/temperatur/temperatur.component.html
@@ -2,6 +2,6 @@
   <h5>Et harum quidem</h5>
   <span class="w-line"> </span>
   <span class="cloud"> </span>
-  <h2>14<sup class="degree">°</sup></h2>
-  <h6>Water 20<sup class="degree">°</sup></h6>
+  <h2>{{activePlace?.airTemp}}<sup class="degree">°</sup></h2>
+  <h6>Water {{activePlace?.waterTemp}}<sup class="degree">°</sup></h6>
 </div>
