--- a/src/app/area-points/area-points.component.html
+++ b/src/app/area-points/area-points.component.html
@@ -1,34 +1,35 @@
 <div class="element-left-bottom">
-  <div class="ele-strip">
-    <ul>
-      <li><a href="#" (click)="filtered($event)">Hotel</a></li>
-      <li><a href="#" (click)="filtered($event)" >Fishing</a></li>
-      <li><a href="#" (click)="filtered($event)" >Tours</a></li>
-      <li class="anc-bor" (click)="filtered($event)" ><a href="#">Weather</a></li>
-    </ul>
-  </div>
-  <div class="village">
-    <h3>Righteous indignation & like</h3>
-    <span class="line"> </span>
-    <div class="activity_box">
-      <div class="scrollbar" id="style-2">
-        <div *ngFor="let place of places | typeFilter:type; let i = index"
-             class="activity-row"
-             [ngClass]="{active: place.name == activePlace.name ? true : false}">
-          <div class="activity-desc">
-            <h5 (click)="choose(place)">{{place?.name}}</h5>
-            <p>{{place?.description}}</p>
-            <h6>{{place?.phone}}</h6>
-          </div>
-          <div class="activity-img">
-            <ul>
-              <li><img [src]="place?.images[0]"  alt=""/></li>
-              <li><img [src]="place?.images[1]"  alt=""/></li>
-            </ul>
-          </div>
-          <div class="clear"> </div>
-        </div>
-      </div>
+    <div class="ele-strip">
+        <ul>
+            <li><a href="#" (click)="filtered($event)">Hotel</a></li>
+            <li><a href="#" (click)="filtered($event)">Fishing</a></li>
+            <li><a href="#" (click)="filtered($event)">Tours</a></li>
+            <li class="anc-bor" (click)="filtered($event)"><a href="#">Weather</a></li>
+        </ul>
     </div>
-  </div>
+    <div class="village">
+        <h3>Righteous indignation & like</h3>
+        <span class="line"> </span>
+        <div class="activity_box">
+            <div class="scrollbar" id="style-2">
+                <div *ngFor="let place of places | typeFilter:type; let i = index"
+                     class="activity-row"
+                     (click)="choose(place)"
+                     [ngClass]="{active: place.name == activePlace.name ? true : false}">
+                    <div class="activity-desc">
+                        <h5>{{place?.name}}</h5>
+                        <p>{{place?.description}}</p>
+                        <h6>{{place?.phone}}</h6>
+                    </div>
+                    <div class="activity-img">
+                        <ul>
+                            <li><img [src]="place?.images[0]" alt=""/></li>
+                            <li><img [src]="place?.images[1]" alt=""/></li>
+                        </ul>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
